--- a/org/pyretechnics.org
+++ b/org/pyretechnics.org
@@ -2119,12 +2119,39 @@ $\phi_W = \phi_S = 0$). In this case, the only necessary input is a
 moisturized fuel model (as created in section [[Applying Fuel Moisture
 to a Fuel Model]]).
 
-#+name: rothermel-surface-fire-spread-no-wind-no-slope
+**** Module Imports
+
+#+name: surface-fire-imports
 #+begin_src python
 from math import exp
 from pyretechnics.fuel_models import map_category, map_size_class, category_sum, size_class_sum
+#+end_src
+
+**** Common Intermediate Calculations
+
+#+name: surface-fire-common-intermediate-calculations
+#+begin_src python
+def calc_packing_ratio(w_o, rho_p, delta):
+    if (delta > 0.0):
+        beta_i = size_class_sum(lambda i: w_o[i] / rho_p[i])
+        return category_sum(lambda i: beta_i[i]) / delta
+    else:
+        return 0.0
 
 
+def calc_surface_area_to_volume_ratio(f_i, f_ij, sigma):
+    sigma_prime_i = size_class_sum(lambda i: f_ij[i] * sigma[i])
+    return category_sum(lambda i: f_i[i] * sigma_prime_i[i])
+
+
+def calc_optimum_packing_ratio(sigma_prime):
+    return (3.348 / sigma_prime ** 0.8189) if (sigma_prime > 0.0) else 1.0
+#+end_src
+
+**** Reaction Intensity ($I_R$)
+
+#+name: surface-fire-reaction-intensity
+#+begin_src python
 def calc_mineral_damping_coefficients(f_ij, S_e):
     S_e_i = size_class_sum(lambda i: f_ij[i] * S_e[i])
     return map_category(lambda i:
@@ -2155,23 +2182,6 @@ def calc_net_fuel_loading(g_ij, w_o, S_T):
                            )(g_ij[i], w_o[i], S_T[i]))
 
 
-def calc_packing_ratio(w_o, rho_p, delta):
-    if (delta > 0.0):
-        beta_i = size_class_sum(lambda i: w_o[i] / rho_p[i])
-        return category_sum(lambda i: beta_i[i]) / delta
-    else:
-        return 0.0
-
-
-def calc_surface_area_to_volume_ratio(f_i, f_ij, sigma):
-    sigma_prime_i = size_class_sum(lambda i: f_ij[i] * sigma[i])
-    return category_sum(lambda i: f_i[i] * sigma_prime_i[i])
-
-
-def calc_optimum_packing_ratio(sigma_prime):
-    return (3.348 / sigma_prime ** 0.8189) if (sigma_prime > 0.0) else 1.0
-
-
 def calc_optimum_reaction_velocity(beta, sigma_prime, beta_op):
     # Albini 1976 replaces 1 / (4.774 * (sigma_prime ** 0.1) - 7.27)
     A               = (133.0 / sigma_prime ** 0.7913) if (sigma_prime > 0.0) else 0.0
@@ -2189,41 +2199,66 @@ def calc_heat_per_unit_area(eta_S_i, eta_M_i, h_i, W_n_i):
 
 def calc_reaction_intensity(Gamma_prime, Btus):
     return Gamma_prime * Btus
+#+end_src
 
+**** Propagating Flux Ratio ($\xi$)
 
+#+name: surface-fire-propagating-flux-ratio
+#+begin_src python
 def calc_propagating_flux_ratio(beta, sigma_prime):
     return exp((0.792 + 0.681 * (sigma_prime ** 0.5)) * (beta + 0.1)) / (192.0 + 0.2595 * sigma_prime)
+#+end_src
 
+**** Oven-Dry Fuel Bed Bulk Density ($\rho_b$)
 
-def calc_heat_of_preignition(M_f):
-    return map_size_class(lambda i: 250.0 + 1116.0 * M_f[i])
-
-
-# FIXME: remove Q
-def calc_heat_distribution(sigma, Q, f_ij):
-    return size_class_sum(lambda i:
-                          (lambda sigma:
-                           f_ij[i] * exp(-138.0 / sigma) * Q[i] if (sigma > 0.0) else 0.0
-                           )(sigma[i]))
-
-
+#+name: surface-fire-oven-dry-fuel-bed-bulk-density
+#+begin_src python
 def calc_ovendry_bulk_density(w_o, delta):
     if (delta > 0.0):
         rho_b_i = size_class_sum(lambda i: w_o[i])
         return category_sum(lambda i: rho_b_i[i]) / delta
     else:
         return 0.0
+#+end_src
+
+**** Effective Heating Number ($\epsilon$)
+
+#+name: surface-fire-effective-heating-number
+#+begin_src python
+def calc_heat_of_preignition_distribution(M_f):
+    return map_size_class(lambda i: 250.0 + 1116.0 * M_f[i])
+
+
+def calc_heat_distribution(sigma, Q_ig_ij, f_ij):
+    return size_class_sum(lambda i:
+                          (lambda sigma:
+                           f_ij[i] * exp(-138.0 / sigma) * Q_ig_ij[i] if (sigma > 0.0) else 0.0
+                           )(sigma[i]))
 
 
 def calc_effective_heating_number(f_i, epsilon_i):
     return category_sum(lambda i: f_i[i] * epsilon_i[i])
+#+end_src
 
+**** Heat of Preignition ($Q_{ig}$)
 
+#+name: surface-fire-heat-of-preignition
+#+begin_src python
+#+end_src
+
+**** Surface Fire Spread Rate (No Wind No Slope)
+
+#+name: surface-fire-spread-rate-no-wind-no-slope
+#+begin_src python
 def calc_surface_fire_spread_rate(I_R, xi, rho_b, epsilon):
-    rho_b_epsilon_Q = rho_b * epsilon
-    return ((I_R * xi) / rho_b_epsilon_Q) if (rho_b_epsilon_Q > 0.0) else 0.0
+    rho_b_epsilon_Q_ig = rho_b * epsilon
+    return ((I_R * xi) / rho_b_epsilon_Q_ig) if (rho_b_epsilon_Q_ig > 0.0) else 0.0
+#+end_src
 
+**** Additional Calculations
 
+#+name: surface-fire-additional-calculations
+#+begin_src python
 def calc_residence_time(sigma_prime):
     return 384.0 / sigma_prime
 
@@ -2291,9 +2326,9 @@ def rothermel_surface_fire_spread_no_wind_no_slope(moisturized_fuel_model):
     Btus           = calc_heat_per_unit_area(eta_S_i, eta_M_i, h_i, W_n_i)      # (Btu/ft^2)
     I_R            = calc_reaction_intensity(Gamma_prime, Btus)                 # (Btu/ft^2/min)
     xi             = calc_propagating_flux_ratio(beta, sigma_prime)
-    Q              = calc_heat_of_preignition(M_f)                              # (Btu/lb)
-    epsilon_i      = calc_heat_distribution(sigma, Q, f_ij)
     rho_b          = calc_ovendry_bulk_density(w_o, delta)                      # (lb/ft^3)
+    Q_ig_ij        = calc_heat_of_preignition_distribution(M_f)                 # (Btu/lb)
+    epsilon_i      = calc_heat_distribution(sigma, Q_ig_ij, f_ij)
     epsilon        = calc_effective_heating_number(f_i, epsilon_i)
     R              = calc_surface_fire_spread_rate(I_R, xi, rho_b, epsilon)     # (ft/min)
     t_res          = calc_residence_time(sigma_prime)
