--- a/org/pyretechnics.org
+++ b/org/pyretechnics.org
@@ -2071,8 +2071,9 @@ The following sections define functions that calculate the spread rate
 and intensity of a fire burning through surface fuels. These functions
 combine fuel models and fuel moisture values (as defined in section
 [[Fuel Model and Moisture Definitions (pyretechnics.fuel_models)]]) with
-wind and topography inputs to determine the spread rate and direction
-of a surface fire.
+wind and topography inputs to determine the maximum spread rate and
+direction of a surface fire as well as its fireline intensity and
+flame length.
 
 *** Rothermel's Surface Fire Rate of Spread Equation
 
@@ -2080,8 +2081,10 @@ To simulate fire behavior in as similar a way as possible to the US
 government-sponsored fire models (e.g., FARSITE, FlamMap, FPA,
 BehavePlus), Pyretechnics adopts the surface fire spread and reaction
 intensity formulas from Rothermel's 1972 publication "A Mathematical
-Model for Predicting Fire Spread in Wildland Fuels"[fn::Rothermel1972]
-and should align with the updated description provided in Patricia
+Model for Predicting Fire Spread in Wildland Fuels", adjusted
+according to Albini 1976 Appendix III to match the behavior of
+Albini's original FIREMODS library.[fn::Rothermel1972][fn::Albini1976]
+This should align with the updated description provided in Patricia
 Andrews' 2018 publication "The Rothermel Surface Fire Spread Model and
 Associated Developments: A Comprehensive
 Explanation".[fn::Andrews2018]
@@ -2111,7 +2114,7 @@ where these terms have the meanings shown in Table
 | $Q_{ig}$   | heat of preignition            | $\text{Btu}/\text{lb}$              |
 |------------+--------------------------------+-------------------------------------|
 
-*** Surface Fire Spread Rate without Wind or Slope
+*** Surface Fire Spread Rate Functions without Wind or Slope
 
 In this section, Rothermel's surface fire spread rate equation will be
 computed without introducing the effects of wind or slope (i.e.,
@@ -2131,6 +2134,11 @@ from pyretechnics.fuel_models import map_category, map_size_class, category_sum,
 
 #+name: surface-fire-common-intermediate-calculations
 #+begin_src python
+def calc_surface_area_to_volume_ratio(f_i, f_ij, sigma):
+    sigma_prime_i = size_class_sum(lambda i: f_ij[i] * sigma[i])
+    return category_sum(lambda i: f_i[i] * sigma_prime_i[i])
+
+
 def calc_packing_ratio(w_o, rho_p, delta):
     if (delta > 0.0):
         beta_i = size_class_sum(lambda i: w_o[i] / rho_p[i])
@@ -2139,16 +2147,11 @@ def calc_packing_ratio(w_o, rho_p, delta):
         return 0.0
 
 
-def calc_surface_area_to_volume_ratio(f_i, f_ij, sigma):
-    sigma_prime_i = size_class_sum(lambda i: f_ij[i] * sigma[i])
-    return category_sum(lambda i: f_i[i] * sigma_prime_i[i])
-
-
 def calc_optimum_packing_ratio(sigma_prime):
     return (3.348 / sigma_prime ** 0.8189) if (sigma_prime > 0.0) else 1.0
 #+end_src
 
-**** Reaction Intensity ($I_R$)
+**** Reaction Intensity: $I_R$
 
 #+name: surface-fire-reaction-intensity
 #+begin_src python
@@ -2182,7 +2185,11 @@ def calc_net_fuel_loading(g_ij, w_o, S_T):
                            )(g_ij[i], w_o[i], S_T[i]))
 
 
-def calc_optimum_reaction_velocity(beta, sigma_prime, beta_op):
+def calc_heat_per_unit_area(eta_S_i, eta_M_i, h_i, W_n_i):
+    return category_sum(lambda i: W_n_i[i] * h_i[i] * eta_M_i[i] * eta_S_i[i])
+
+
+def calc_optimum_reaction_velocity(sigma_prime, beta, beta_op):
     # Albini 1976 replaces 1 / (4.774 * (sigma_prime ** 0.1) - 7.27)
     A               = (133.0 / sigma_prime ** 0.7913) if (sigma_prime > 0.0) else 0.0
     B               = sigma_prime ** 1.5
@@ -2193,23 +2200,41 @@ def calc_optimum_reaction_velocity(beta, sigma_prime, beta_op):
     return Gamma_prime_max * (C ** A) * exp(A * (1.0 - C))
 
 
-def calc_heat_per_unit_area(eta_S_i, eta_M_i, h_i, W_n_i):
-    return category_sum(lambda i: W_n_i[i] * h_i[i] * eta_M_i[i] * eta_S_i[i])
-
-
-def calc_reaction_intensity(Gamma_prime, Btus):
-    return Gamma_prime * Btus
+def calc_reaction_intensity(moisturized_fuel_model, sigma_prime, beta, beta_op):
+    w_o         = moisturized_fuel_model["w_o"]
+    h           = moisturized_fuel_model["h"]
+    S_T         = moisturized_fuel_model["S_T"]
+    S_e         = moisturized_fuel_model["S_e"]
+    M_x         = moisturized_fuel_model["M_x"]
+    M_f         = moisturized_fuel_model["M_f"]
+    f_ij        = moisturized_fuel_model["f_ij"]
+    g_ij        = moisturized_fuel_model["g_ij"]
+    eta_S_i     = calc_mineral_damping_coefficients(f_ij, S_e)
+    eta_M_i     = calc_moisture_damping_coefficients(f_ij, M_f, M_x)
+    h_i         = calc_low_heat_content(f_ij, h)                             # (Btu/lb)
+    W_n_i       = calc_net_fuel_loading(g_ij, w_o, S_T)                      # (lb/ft^2)
+    Btus        = calc_heat_per_unit_area(eta_S_i, eta_M_i, h_i, W_n_i)      # (Btu/ft^2)
+    Gamma_prime = calc_optimum_reaction_velocity(sigma_prime, beta, beta_op) # (1/min)
+    return Btus * Gamma_prime                                                # (Btu/ft^2/min)
 #+end_src
 
-**** Propagating Flux Ratio ($\xi$)
+**** Propagating Flux Ratio: $\xi$
 
 #+name: surface-fire-propagating-flux-ratio
 #+begin_src python
-def calc_propagating_flux_ratio(beta, sigma_prime):
+def calc_propagating_flux_ratio(sigma_prime, beta):
     return exp((0.792 + 0.681 * (sigma_prime ** 0.5)) * (beta + 0.1)) / (192.0 + 0.2595 * sigma_prime)
 #+end_src
 
-**** Oven-Dry Fuel Bed Bulk Density ($\rho_b$)
+**** Heat Source (No Wind No Slope): $I_R \, \xi$
+
+#+name: surface-fire-heat-source-no-wind-no-slope
+#+begin_src python
+def calc_heat_source(I_R, xi):
+    return I_R * xi
+#+end_src
+
+**** Oven-Dry Fuel Bed Bulk Density: $\rho_b$
 
 #+name: surface-fire-oven-dry-fuel-bed-bulk-density
 #+begin_src python
@@ -2221,75 +2246,103 @@ def calc_ovendry_bulk_density(w_o, delta):
         return 0.0
 #+end_src
 
-**** Effective Heating Number ($\epsilon$)
+**** Effective Heating Number Distribution: $\epsilon_{ij}$
 
-#+name: surface-fire-effective-heating-number
+#+name: surface-fire-effective-heating-number-distribution
+#+begin_src python
+def calc_effective_heating_number_distribution(sigma):
+    return map_size_class(lambda i:
+                          (lambda sigma:
+                           exp(-138.0 / sigma) if (sigma > 0.0) else 0.0
+                           )(sigma[i]))
+#+end_src
+
+**** Heat of Preignition Distribution: $(Q_{ig})_{ij}$
+
+#+name: surface-fire-heat-of-preignition-distribution
 #+begin_src python
 def calc_heat_of_preignition_distribution(M_f):
     return map_size_class(lambda i: 250.0 + 1116.0 * M_f[i])
-
-
-def calc_heat_distribution(sigma, Q_ig_ij, f_ij):
-    return size_class_sum(lambda i:
-                          (lambda sigma:
-                           f_ij[i] * exp(-138.0 / sigma) * Q_ig_ij[i] if (sigma > 0.0) else 0.0
-                           )(sigma[i]))
-
-
-def calc_effective_heating_number(f_i, epsilon_i):
-    return category_sum(lambda i: f_i[i] * epsilon_i[i])
 #+end_src
 
-**** Heat of Preignition ($Q_{ig}$)
+**** Heat Sink: $\rho_b \, \epsilon \, Q_{ig}$
 
-#+name: surface-fire-heat-of-preignition
+#+name: surface-fire-heat-sink
 #+begin_src python
+def calc_heat_sink(f_i, f_ij, rho_b, epsilon_ij, Q_ig_ij):
+    effective_heat_of_preignition_i = size_class_sum(lambda i: f_ij[i] * epsilon_ij[i] * Q_ig_ij[i])
+    effective_heat_of_preignition   = category_sum(lambda i: f_i[i] * effective_heat_of_preignition_i[i])
+    return rho_b * effective_heat_of_preignition
 #+end_src
 
-**** Surface Fire Spread Rate (No Wind No Slope)
+**** Spread Rate (No Wind No Slope): $I_R \, \xi \, / \, \rho_b \, \epsilon \, Q_{ig}$
 
 #+name: surface-fire-spread-rate-no-wind-no-slope
 #+begin_src python
-def calc_surface_fire_spread_rate(I_R, xi, rho_b, epsilon):
-    rho_b_epsilon_Q_ig = rho_b * epsilon
-    return ((I_R * xi) / rho_b_epsilon_Q_ig) if (rho_b_epsilon_Q_ig > 0.0) else 0.0
+def calc_spread_rate(heat_source, heat_sink):
+    return heat_source / heat_sink if (heat_sink > 0.0) else 0.0
 #+end_src
 
-**** Additional Calculations
+*** Stored Auxiliary Values and Functions
 
-#+name: surface-fire-additional-calculations
+In order to compute the maximum spread rate, direction, and intensity
+of the surface fire front, we will need to incorporate the effects of
+wind and slope on the fire. However, we can precompute several
+intermediate values and functions needed for this step based solely on
+the fuel bed characteristics already available to us with just a
+moisturized fuel model (see section [[Applying Fuel Moisture to a Fuel
+Model]]).
+
+**** Residence Time: $t_{\text{res}}$
+
+#+name: surface-fire-residence-time
 #+begin_src python
 def calc_residence_time(sigma_prime):
     return 384.0 / sigma_prime
+#+end_src
 
+**** Slope Factor Function: $\tan(\theta_S) \mapsto \phi_S$
 
+#+name: surface-fire-slope-factor-function
+#+begin_src python
 def get_phi_S_fn(beta):
     if (beta > 0.0):
         G = 5.275 * beta ** -0.3
         return lambda slope: (slope ** 2.0) * G if (slope > 0.0) else 0.0
     else:
         return lambda _: 0.0
+#+end_src
 
+**** Wind Factor Function: $U_{\text{mid}} \mapsto \phi_W$
 
+#+name: surface-fire-wind-factor-function
+#+begin_src python
 def get_phi_W_fn(beta, B, C, F):
     if (beta > 0.0):
         C_over_F = C / F
         return lambda midflame_wind_speed: (midflame_wind_speed ** B) * C_over_F if (midflame_wind_speed > 0.0) else 0.0
     else:
         return lambda _: 0.0
+#+end_src
 
+**** Wind Speed Function: $\phi_W \mapsto U_{\text{mid}}$
 
+#+name: surface-fire-wind-speed-function
+#+begin_src python
 def get_wind_speed_fn(B, C, F):
     F_over_C  = F / C
     B_inverse = 1.0 / B
     return lambda phi_W: (phi_W * F_over_C) ** B_inverse
+#+end_src
 
+*** Main Rothermel Entrypoint Function
 
+#+name: rothermel-surface-fire-spread-no-wind-no-slope
+#+begin_src python
+# FIXME: Replace reaction_intensity and residence_time with fireline_intensity and max_wind_speed
 def rothermel_surface_fire_spread_no_wind_no_slope(moisturized_fuel_model):
     """
-    Returns the rate of surface fire spread in ft/min and the reaction
-    intensity (i.e., amount of heat output) of a fire in Btu/ft^2/min
-    given a map containing these keys:
+    Given a dictionary containing these keys:
     - delta [fuel depth (ft)]
     - w_o   [ovendry fuel loading (lb/ft^2)]
     - rho_p [ovendry particle density (lb/ft^3)]
@@ -2302,36 +2355,34 @@ def rothermel_surface_fire_spread_no_wind_no_slope(moisturized_fuel_model):
     - f_ij  [percent of load per size class (%)]
     - f_i   [percent of load per category (%)]
     - g_ij  [percent of load per size class from Albini_1976_FIREMOD, page 20]
+
+    return a dictionary containing these keys:
+    - base_spread_rate   (ft/min)
+    - reaction_intensity (Btu/ft^2/min)
+    - residence_time     (min)
+    - get_phi_S          (lambda: slope => phi_S)
+    - get_phi_W          (lambda: midflame_wind_speed => phi_W)
+    - get_wind_speed     (lambda: phi_W => midflame_wind_speed)
     """
     delta          = moisturized_fuel_model["delta"]
     w_o            = moisturized_fuel_model["w_o"]
     rho_p          = moisturized_fuel_model["rho_p"]
     sigma          = moisturized_fuel_model["sigma"]
-    h              = moisturized_fuel_model["h"]
-    S_T            = moisturized_fuel_model["S_T"]
-    S_e            = moisturized_fuel_model["S_e"]
-    M_x            = moisturized_fuel_model["M_x"]
     M_f            = moisturized_fuel_model["M_f"]
     f_ij           = moisturized_fuel_model["f_ij"]
     f_i            = moisturized_fuel_model["f_i"]
-    g_ij           = moisturized_fuel_model["g_ij"]
-    eta_S_i        = calc_mineral_damping_coefficients(f_ij, S_e)
-    eta_M_i        = calc_moisture_damping_coefficients(f_ij, M_f, M_x)
-    h_i            = calc_low_heat_content(f_ij, h)
-    W_n_i          = calc_net_fuel_loading(g_ij, w_o, S_T)                      # (lb/ft^2)
-    beta           = calc_packing_ratio(w_o, rho_p, delta)
     sigma_prime    = calc_surface_area_to_volume_ratio(f_i, f_ij, sigma)
+    beta           = calc_packing_ratio(w_o, rho_p, delta)
     beta_op        = calc_optimum_packing_ratio(sigma_prime)
-    Gamma_prime    = calc_optimum_reaction_velocity(beta, sigma_prime, beta_op) # (1/min)
-    Btus           = calc_heat_per_unit_area(eta_S_i, eta_M_i, h_i, W_n_i)      # (Btu/ft^2)
-    I_R            = calc_reaction_intensity(Gamma_prime, Btus)                 # (Btu/ft^2/min)
-    xi             = calc_propagating_flux_ratio(beta, sigma_prime)
-    rho_b          = calc_ovendry_bulk_density(w_o, delta)                      # (lb/ft^3)
-    Q_ig_ij        = calc_heat_of_preignition_distribution(M_f)                 # (Btu/lb)
-    epsilon_i      = calc_heat_distribution(sigma, Q_ig_ij, f_ij)
-    epsilon        = calc_effective_heating_number(f_i, epsilon_i)
-    R              = calc_surface_fire_spread_rate(I_R, xi, rho_b, epsilon)     # (ft/min)
-    t_res          = calc_residence_time(sigma_prime)
+    I_R            = calc_reaction_intensity(moisturized_fuel_model, sigma_prime, beta, beta_op) # Btu/ft^2/min
+    xi             = calc_propagating_flux_ratio(sigma_prime, beta)
+    heat_source    = calc_heat_source(I_R, xi)                                  # Btu/ft^2/min
+    rho_b          = calc_ovendry_bulk_density(w_o, delta)                      # lb/ft^3
+    epsilon_ij     = calc_effective_heating_number_distribution(sigma)
+    Q_ig_ij        = calc_heat_of_preignition_distribution(M_f)                 # Btu/lb
+    heat_sink      = calc_heat_sink(f_i, f_ij, rho_b, epsilon_ij, Q_ig_ij)      # Btu/ft^3
+    R              = calc_spread_rate(heat_source, heat_sink)                   # ft/min
+    t_res          = calc_residence_time(sigma_prime)                           # min
     B              = 0.02526 * (sigma_prime ** 0.54)
     C              = 7.47 * exp(-0.133 * (sigma_prime ** 0.55))
     E              = 0.715 * exp(-3.59 * (sigma_prime / 10000.0))
