--- a/org/pyretechnics.org
+++ b/org/pyretechnics.org
@@ -1534,11 +1534,11 @@ thermally relevant physical properties shown in Table
 | $M_f$    | fuel particle moisture content             | $\text{lb moisture}/\text{lb ovendry wood}$             |
 |----------+--------------------------------------------+---------------------------------------------------------|
 
-*Note:* While $M_f$ is not, in fact, directly assigned to any of these
-fuel models, their definitions remain incomplete for the purposes of
-fire spread modelling (particularly those reliant on the curing
-formulas of dynamic fuel loading) until it is provided as a
-characteristic of local weather conditions.
+While $M_f$ is not, in fact, directly assigned to any of these fuel
+models, their definitions remain incomplete for the purposes of fire
+spread modelling (particularly those reliant on the curing formulas of
+dynamic fuel loading) until it is provided as a characteristic of
+local weather conditions.
 
 Although most fuel model properties are static with respect to
 environmental conditions, the fuel moisture content can have two
@@ -2113,7 +2113,7 @@ where these terms have the meanings shown in Table
 | $Q_{ig}$   | heat of preignition            | $\text{Btu}/\text{lb}$              |
 |------------+--------------------------------+-------------------------------------|
 
-*** Surface Fire Spread Rate Functions without Wind or Slope
+*** Surface Fire Spread Rate Functions (No Wind No Slope)
 
 In this section, Rothermel's surface fire spread rate equation will be
 computed without introducing the effects of wind or slope (i.e.,
@@ -2349,7 +2349,17 @@ def calc_flame_length(fire_line_intensity):
     return 0.45 * (fire_line_intensity ** 0.46)
 #+end_src
 
-*** Stored Auxiliary Values and Functions
+Because of the linear relationship between spread rate, flame depth,
+and fireline intensity, once we have calculated the no wind, no slope
+fireline intensity, we can simply multiply it by the same combined
+wind and slope factor that is applied to the no wind, no slope spread
+rate in order to derive the final fireline intensity.
+
+Since flame length's relationship to fireline intensity is non-linear,
+we will need to wait until after any transformations are applied to
+fireline intensity before calculating the associated flame length.
+
+*** Wind and Slope Factor Functions
 
 In order to compute the maximum spread rate, direction, and intensity
 of the surface fire front, we will need to incorporate the effects of
@@ -2358,6 +2368,20 @@ intermediate values and functions needed for this step based solely on
 the fuel bed characteristics already available to us with just a
 moisturized fuel model (see section [[Applying Fuel Moisture to a Fuel
 Model]]).
+
+**** Max Effective Wind Speed: $U_{\text{eff}}^{\text{max}}$
+
+The midflame wind speed that would be required to produce the combined
+spread rate in a no-slope scenario is termed the effective windspeed
+$U_{\text{eff}}$. Following the recommendations given in Appendix III
+of Albini 1976, these midflame wind speeds are all limited to $0.9
+I_R$.[fn::Albini1976]
+
+#+name: surface-fire-max-effective-wind-speed
+#+begin_src python
+def calc_max_effective_wind_speed(reaction_intensity):
+    return 0.9 * reaction_intensity
+#+end_src
 
 **** Slope Factor Function: $\tan(\theta_S) \mapsto \phi_S$
 
@@ -2393,12 +2417,11 @@ def get_wind_speed_fn(B, C, F):
     return lambda phi_W: (phi_W * F_over_C) ** B_inverse
 #+end_src
 
-*** Main Rothermel Entrypoint Function
+*** Surface Fire Behavior Functions (No Wind No Slope)
 
-#+name: rothermel-surface-fire-spread-no-wind-no-slope
+#+name: surface-fire-behavior-no-wind-no-slope
 #+begin_src python
-# FIXME: Replace reaction_intensity and residence_time with fireline_intensity and max_wind_speed
-def rothermel_surface_fire_spread_no_wind_no_slope(moisturized_fuel_model):
+def calc_surface_fire_behavior_no_wind_no_slope(moisturized_fuel_model):
     """
     Given a dictionary containing these keys:
     - delta [fuel depth (ft)]
@@ -2415,13 +2438,14 @@ def rothermel_surface_fire_spread_no_wind_no_slope(moisturized_fuel_model):
     - g_ij  [percent of load per size class from Albini_1976_FIREMOD, page 20]
 
     return a dictionary containing these keys:
-    - base_spread_rate   (ft/min)
-    - reaction_intensity (Btu/ft^2/min)
-    - residence_time     (min)
-    - get_phi_S          (lambda: slope => phi_S)
-    - get_phi_W          (lambda: midflame_wind_speed => phi_W)
-    - get_wind_speed     (lambda: phi_W => midflame_wind_speed)
+    - base_spread_rate         (ft/min)
+    - base_fireline_intensity  (Btu/ft/s)
+    - max_effective_wind_speed (ft/min)
+    - get_phi_S                (lambda: slope => phi_S)
+    - get_phi_W                (lambda: midflame_wind_speed => phi_W)
+    - get_wind_speed           (lambda: phi_W => midflame_wind_speed)
     """
+    # Unpack fuel model values
     delta          = moisturized_fuel_model["delta"]
     w_o            = moisturized_fuel_model["w_o"]
     rho_p          = moisturized_fuel_model["rho_p"]
@@ -2429,6 +2453,7 @@ def rothermel_surface_fire_spread_no_wind_no_slope(moisturized_fuel_model):
     M_f            = moisturized_fuel_model["M_f"]
     f_ij           = moisturized_fuel_model["f_ij"]
     f_i            = moisturized_fuel_model["f_i"]
+    # Calculate base spread rate (no wind, no slope)
     sigma_prime    = calc_surface_area_to_volume_ratio(f_i, f_ij, sigma)
     beta           = calc_packing_ratio(w_o, rho_p, delta)
     beta_op        = calc_optimum_packing_ratio(sigma_prime)
@@ -2440,7 +2465,12 @@ def rothermel_surface_fire_spread_no_wind_no_slope(moisturized_fuel_model):
     Q_ig_ij        = calc_heat_of_preignition_distribution(M_f)                 # Btu/lb
     heat_sink      = calc_heat_sink(f_i, f_ij, rho_b, epsilon_ij, Q_ig_ij)      # Btu/ft^3
     R              = calc_spread_rate(heat_source, heat_sink)                   # ft/min
+    # Calculate base fireline intensity (no wind, no slope)
     t_res          = calc_residence_time(sigma_prime)                           # min
+    D_A            = calc_flame_depth(R, t_res)                                 # ft
+    I_B            = calc_fire_line_intensity(I_R, D_A)                         # Btu/ft/s
+    # Pre-compute values related to wind and slope
+    U_eff_max      = calc_max_effective_wind_speed(I_R)                         # ft/min
     B              = 0.02526 * (sigma_prime ** 0.54)
     C              = 7.47 * exp(-0.133 * (sigma_prime ** 0.55))
     E              = 0.715 * exp(-3.59 * (sigma_prime / 10000.0))
@@ -2449,12 +2479,12 @@ def rothermel_surface_fire_spread_no_wind_no_slope(moisturized_fuel_model):
     get_phi_W      = get_phi_W_fn(beta, B, C, F)
     get_wind_speed = get_wind_speed_fn(B, C, F)
     return {
-        "base_spread_rate"  : R,
-        "reaction_intensity": I_R,
-        "residence_time"    : t_res,
-        "get_phi_S"         : get_phi_S,
-        "get_phi_W"         : get_phi_W,
-        "get_wind_speed"    : get_wind_speed,
+        "base_spread_rate"        : R,
+        "base_fireline_intensity" : I_B,
+        "max_effective_wind_speed": U_eff_max,
+        "get_phi_S"               : get_phi_S,
+        "get_phi_W"               : get_phi_W,
+        "get_wind_speed"          : get_wind_speed,
     }
 #+end_src
 
@@ -2736,16 +2766,17 @@ def add_eccentricity(spread_properties):
 
 
 # NOTE: No longer takes ellipse_adjustment_factor parameter
+# FIXME: Return max_fireline_intensity
 def rothermel_surface_fire_spread_max(surface_fire_min, midflame_wind_speed, wind_from_direction,
                                       slope, aspect, spread_rate_adjustment=1.0):
     spread_rate        = surface_fire_min["base_spread_rate"] * spread_rate_adjustment
-    reaction_intensity = surface_fire_min["reaction_intensity"]
+    fireline_intensity = surface_fire_min["base_fireline_intensity"]
+    max_wind_speed     = surface_fire_min["max_effective_wind_speed"]
     get_phi_S          = surface_fire_min["get_phi_S"]
     get_phi_W          = surface_fire_min["get_phi_W"]
     get_wind_speed     = surface_fire_min["get_wind_speed"]
     slope_direction    = (aspect + 180.0) % 360.0
     wind_to_direction  = (wind_from_direction + 180.0) % 360.0
-    max_wind_speed     = 0.9 * reaction_intensity
     phi_S              = get_phi_S(slope)
     phi_W              = get_phi_W(midflame_wind_speed)
     phi_max            = get_phi_W(max_wind_speed)
@@ -4102,11 +4133,9 @@ def compute_max_in_situ_values(inputs, t, y, x):
                                    fuel_moisture_live_herbaceous,
                                    fuel_moisture_live_woody]
         moisturized_fuel_model  = moisturize(fuel_model, fuel_moisture)
-        # Baseline Surface Spread Rate, Residence Time, and Reaction Intensity
-        # TODO: Memoize rothermel_surface_fire_spread_no_wind_no_slope
-        surface_fire_min        = sf.rothermel_surface_fire_spread_no_wind_no_slope(moisturized_fuel_model)
-        residence_time          = surface_fire_min["residence_time"] # min
-        reaction_intensity      = surface_fire_min["reaction_intensity"] # Btu/ft^2/min
+        # Baseline Surface Fire Behavior
+        # TODO: Memoize calc_surface_fire_behavior_no_wind_no_slope
+        surface_fire_min        = sf.calc_surface_fire_behavior_no_wind_no_slope(moisturized_fuel_model)
         # Midflame Wind Speed
         wind_speed_10m          = sqrt(wind_speed_10m_x ** 2.0 + wind_speed_10m_y ** 2.0) # m/min
         wind_speed_20ft         = wind_speed_10m_to_wind_speed_20ft(wind_speed_10m) # m/min
@@ -4115,7 +4144,7 @@ def compute_max_in_situ_values(inputs, t, y, x):
                                                             m_to_ft(canopy_height),
                                                             canopy_cover) # unitless
         midflame_wind_speed     = m_to_ft(wind_speed_20ft * wind_adj_factor) # ft/min
-        # Max Surface Spread Rate/Direction and Surface Eccentricity
+        # Max Surface Fire Behavior
         spread_rate_adjustment  = fuel_spread_adjustment * weather_spread_adjustment # unitless
         surface_fire_max        = sf.rothermel_surface_fire_spread_max(surface_fire_min,
                                                                        midflame_wind_speed,
@@ -4123,23 +4152,21 @@ def compute_max_in_situ_values(inputs, t, y, x):
                                                                        slope,
                                                                        aspect,
                                                                        spread_rate_adjustment)
-        max_surface_spread_rate = surface_fire_max["max_spread_rate"] # ft/min
-        max_spread_direction    = surface_fire_max["max_spread_direction"] # deg
-        surface_eccentricity    = surface_fire_max["eccentricity"] # unitless
-        # Max Surface Intensity
+        max_surface_spread_rate      = surface_fire_max["max_spread_rate"] # ft/min
+        max_spread_direction         = surface_fire_max["max_spread_direction"] # deg
+        surface_eccentricity         = surface_fire_max["eccentricity"] # unitless
+        max_surface_intensity        = surface_fire_max["max_fireline_intensity"] # Btu/ft/s
+        max_surface_intensity_metric = Btu_ft_s_to_kW_m(max_surface_intensity) # kW/m
         #=======================================================================================
         # NOTE: The calculations to determine the fireline_normal_spread_rate have been elided.
         #       Consider ending this function here and making another function to compute the
         #       surface/crown values based on the provided perimeter spread direction.
         #=======================================================================================
-        max_flame_depth         = sf.calc_flame_depth(max_surface_spread_rate, residence_time) # ft
-        max_surface_intensity   = Btu_ft_s_to_kW_m(sf.calc_fire_line_intensity(reaction_intensity,
-                                                                               max_flame_depth)) # kW/m
         # Check for Crown Fire Initiation
         if cf.van_wagner_crown_fire_initiation(canopy_cover,
                                                canopy_base_height,
                                                foliar_moisture,
-                                               max_surface_intensity):
+                                               max_surface_intensity_metric):
             # Max Crown Spread Rate, Fire Type, and Crown Eccentricity
             max_crown_spread_rate = m_to_ft(cf.cruz_crown_fire_spread(m_min_to_km_hr(wind_speed_10m),
                                                                       canopy_bulk_density,
@@ -4159,7 +4186,7 @@ def compute_max_in_situ_values(inputs, t, y, x):
                                                                  Btu_lb_to_kJ_kg(fuel_model["h"][0])) # kW/m
             # Max Combined Spread Rate, Intensity, and Flame Length
             max_spread_rate       = ft_to_m(max(max_surface_spread_rate, max_crown_spread_rate)) # m/min
-            max_intensity         = max_surface_intensity + max_crown_intensity # kW/m
+            max_intensity         = max_surface_intensity_metric + max_crown_intensity # kW/m
             max_flame_length      = ft_to_m(sf.calc_flame_length(kW_m_to_Btu_ft_s(max_intensity))) # m
             # Return Fire Behavior Values
             return {
@@ -4172,11 +4199,11 @@ def compute_max_in_situ_values(inputs, t, y, x):
             }
         else:
             fire_type                = 1 # 1=surface
-            max_surface_flame_length = ft_to_m(sf.calc_flame_length(kW_m_to_Btu_ft_s(max_surface_intensity))) # m
+            max_surface_flame_length = ft_to_m(sf.calc_flame_length(max_surface_intensity)) # m
             return {
                 "max_spread_rate"        : ft_to_m(max_surface_spread_rate), # m/min
                 "max_spread_direction"   : max_spread_direction,             # deg
-                "max_fire_line_intensity": max_surface_intensity,            # kW/m
+                "max_fire_line_intensity": max_surface_intensity_metric,     # kW/m
                 "max_flame_length"       : max_surface_flame_length,         # m
                 "fire_type"              : fire_type,                        # 1=surface
                 "eccentricity"           : surface_eccentricity,             # unitless
